# picachv-case-study

./: .gitignore  Cargo.toml  convert.py
chronic/: Cargo.toml  chronic.parquet  chronic.policy.parquet
chronic/src/: main.rs
healthcare/: Cargo.toml  healthcare_dataset.csv  healthcare_dataset.parquet  healthcare_dataset.policy.parquet
healthcare/src/: main.rs
policy_gen/: Cargo.toml
policy_gen/src/: main.rs
