[workspace]
resolver = "2"

members = ["chronic", "healthcare", "policy_gen"]

[workspace.dependencies]
polars = { path = "../polars/crates/polars", default-features = false, features = [
  "performant",
  "fmt",
  "simd",
  "lazy",
  "ipc",
  "top_k",
  "streaming",
  "dtype-categorical",
  "round_series",
  "dtype-struct",
  "parquet",
  "is_in",
  "temporal",
  "cross_join",
  "dtype-date",
  "regex",
  "strings",
  "dtype-datetime",
  "semi_anti_join",
] }
